--- a/package.json
+++ b/package.json
@@ -1,14 +1,46 @@
 {
-  "name": "chat-example",
-  "version": "0.0.0",
-  "description": "A chat example to showcase how to use `socket.io` with a static `express` server with `async` for control flow.",
-  "main": "server.js",
-  "repository": "",
-  "author": "Mostafa Eweda <mo.eweda@gmail.com>",
-  "dependencies": {
-    "async": "~0.2.8",
-    "express": "~3.2.4",
-    "quickblox": "^2.5.1",
-    "socket.io": "~0.9.14"
+  "name": "q-municate",
+  "version": "1.10.0",
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:QuickBlox/q-municate-web.git"
+  },
+  "license": "(Apache-2.0)",
+  "dependencies": {},
+  "devDependencies": {
+    "connect-livereload": "^0.5.4",
+    "ghooks": "^1.2.1",
+    "grunt": "^0.4.5",
+    "grunt-bower-requirejs": "^2.0.0",
+    "grunt-contrib-clean": "^1.0.0",
+    "grunt-contrib-concat": "^1.0.1",
+    "grunt-contrib-connect": "^1.0.2",
+    "grunt-contrib-copy": "^1.0.0",
+    "grunt-contrib-cssmin": "^1.0.1",
+    "grunt-contrib-handlebars": "^1.0.0",
+    "grunt-contrib-htmlmin": "^1.5.0",
+    "grunt-contrib-imagemin": "^1.0.0",
+    "grunt-contrib-jshint": "^1.0.0",
+    "grunt-contrib-sass": "^1.0.0",
+    "grunt-contrib-uglify": "^1.0.1",
+    "grunt-contrib-watch": "^1.0.0",
+    "grunt-include-replace": "^4.0.1",
+    "grunt-newer": "^1.1.1",
+    "grunt-open": "^0.2.3",
+    "grunt-requirejs": "^0.4.2",
+    "grunt-rev": "^0.1.0",
+    "grunt-usemin": "^3.1.1",
+    "jshint-stylish": "^2.1.0",
+    "load-grunt-tasks": "^3.3.0",
+    "time-grunt": "^1.2.2"
+  },
+  "scripts": {},
+  "engines": {
+    "node": ">=4.4.5"
+  },
+  "config": {
+    "ghooks": {
+      "pre-push": "grunt test"
+    }
   }
 }
